--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -2,7 +2,7 @@
   <div class="w-full">
     <div class="flex items-center justify-between mx-4">
       <button
-        routerLink="['/', draftPath]"
+        [routerLink]="['/', draftPath]"
         class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
       >
         Back
