--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,7 +10,7 @@
     <div class="order-1">
       <h3 class="mb-2 text-xl font-semibold">Drafts</h3>
       <p class="mb-2">
-        View and manage your drafts effortlessly with Draftzone. Whether you're
+        View and manage your drafts effortlessly with DraftZone. Whether you're
         in the midst of a current draft or revisiting archived ones, our
         platform provides a user-friendly interface to keep track of your teams
         and progress.
@@ -19,7 +19,7 @@
         <li>
           <strong>Current and Archived Drafts:</strong> Access your current
           draft as well as archived drafts with ease. Whether you're preparing
-          for an upcoming match or analyzing past performances, Draftzone
+          for an upcoming match or analyzing past performances, DraftZone
           ensures all your draft data is readily available and organized.
         </li>
         <li>
@@ -30,7 +30,7 @@
         </li>
         <li>
           <strong>Support for Multiple Generations and Formats:</strong> From
-          classic battles to the latest VGC format, Draftzone accommodates a
+          classic battles to the latest VGC format, DraftZone accommodates a
           variety of preferences. With support for multiple generations,
           including National Dex formats, players can enjoy drafting teams
           tailored to their preferred playstyle, whether it's Singles or
@@ -46,7 +46,7 @@
       <h3 class="mb-2 text-xl font-semibold">Track Opponents</h3>
       <p class="mb-2">
         Stay informed about your opponents' draft selections week by week. From
-        monitoring draft selections to recording match results, Draftzone helps
+        monitoring draft selections to recording match results, DraftZone helps
         you strategize effectively for upcoming matchups.
       </p>
       <ul class="pl-8 list-disc">
@@ -133,12 +133,15 @@
       />
     </div>
     <!-- New Planner Section -->
-    <div class="order-7">
+    <div class="order-7 md:order-8">
       <h3 class="mb-2 text-xl font-semibold">Plan Your Draft</h3>
       <p class="mb-2">
-        Start planning your drafts with ease. Our DraftZone Planner provides
-        everything you need to organize your picks, review strategies, and
-        prepare for your upcoming draft leagues.
+        Start planning your drafts with ease. Our
+        <span class="text-indigo-500 hover:cursor-pointer" routerLink="/planner"
+          >DraftZone Planner</span
+        >
+        provides everything you need to organize your picks, review strategies,
+        and prepare for your upcoming draft leagues.
       </p>
       <ul class="pl-8 list-disc">
         <li>
@@ -155,56 +158,7 @@
     </div>
     <img
       src="../../../assets/screenshots/about/planner.png"
-      class="order-8 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
-    />
-
-    <!-- New Find A League Section -->
-    <div class="order-9">
-      <h3 class="mb-2 text-xl font-semibold">Find A League</h3>
-      <p class="mb-2">
-        Looking to join a new league or advertise your own? Use our "Find A
-        League" section to discover available leagues or promote your own for
-        other players to join.
-      </p>
-      <ul class="pl-8 list-disc">
-        <li>
-          <strong>Discover New Leagues:</strong> Browse a list of available
-          draft leagues. Filter by format, region, and playstyle to find the
-          perfect league for you.
-        </li>
-        <li>
-          <strong>Advertise Your League:</strong> Create a listing for your
-          league and attract new members. Include details like rules, schedules,
-          and format preferences.
-        </li>
-      </ul>
-    </div>
-    <img
-      src="../../../assets/screenshots/about/findleague.png"
-      class="order-10 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
-    />
-
-    <!-- New Other Tools Section -->
-    <div class="order-11">
-      <h3 class="mb-2 text-xl font-semibold">Other Tools</h3>
-      <p class="mb-2">
-        In addition to planning and tracking, DraftZone offers a variety of
-        other useful tools to assist you in your draft leagues.
-      </p>
-      <ul class="pl-8 list-disc">
-        <li>
-          <strong>Damage Calculator:</strong> Quickly calculate potential damage
-          outcomes and optimize your strategies before each battle.
-        </li>
-        <li>
-          <strong>EV/IV Calculator:</strong> Fine-tune your Pokemon's stats with
-          our easy-to-use EV/IV calculator, ensuring your team is battle-ready.
-        </li>
-      </ul>
-    </div>
-    <img
-      src="../../../assets/screenshots/about/othertools.png"
-      class="order-12 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
+      class="justify-self-center order-8 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400 md:order-7"
     />
   </div>
 </div>
