--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -1,4 +1,8 @@
-<form [formGroup]="plannerForm" class="h-full">
+<form
+  [formGroup]="plannerForm"
+  class="h-full"
+  (keydown.enter)="$event.preventDefault()"
+>
   <button type="submit" style="display: none"></button>
   <div formArrayName="drafts" class="flex flex-col h-full">
     <div
