--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -18,10 +18,9 @@
 </div>
 
 <div *ngIf="show" @growIn class="z-10 grid gap-x-1" [ngClass]="getCols()">
-  <div
-    class="flex border-y border-menu-400 bg-menu-200"
-    *ngFor="let move of category.moves"
-  >
+  @for (move of category.moves; track $index) { @if (unlearned ||
+  move.pokemon.length > 0) {
+  <div class="flex border-y border-menu-400 bg-menu-200">
     <div class="flex items-center w-1/3 p-1 border-r border-menu-400">
       <p
         class="w-full py-1 font-semibold text-xs md:text-sm text-center overflow-hidden border-2 rounded"
@@ -38,4 +37,5 @@
       ></sprite>
     </div>
   </div>
+  } }
 </div>
