--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -12,7 +12,7 @@
     class="z-10"
     [speedchart]="matchupData.speedchart"
     [speeds]="matchupData.overview"
-    [level]="matchupData.level"
+    [level]="matchupData.details.level"
   ></speedchart>
   <typechart
     class="z-10 max-w-full w-fit"
