--- a/src/app/matchup-overview/matchup-shared.component.html
+++ b/src/app/matchup-overview/matchup-shared.component.html
@@ -5,19 +5,19 @@
     <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
       <div class="w-full text-center sm:w-auto">
         <p class="text-sm font-semibold text-menu-500">League Name</p>
-        <p class="text-xl font-bold">{{ matchupData.leagueName }}</p>
+        <p class="text-xl font-bold">{{ matchupData.details.leagueName }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
         <p class="text-sm font-semibold text-menu-500">Stage</p>
-        <p class="text-xl font-bold">{{ matchupData.stage }}</p>
+        <p class="text-xl font-bold">{{ matchupData.details.stage }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
         <p class="text-sm font-semibold text-menu-500">Ruleset</p>
-        <p class="text-xl font-bold">{{ matchupData.ruleset }}</p>
+        <p class="text-xl font-bold">{{ matchupData.details.ruleset }}</p>
       </div>
       <div class="w-full text-center sm:w-auto">
         <p class="text-sm font-semibold text-menu-500">Format</p>
-        <p class="text-xl font-bold">{{ matchupData.format }}</p>
+        <p class="text-xl font-bold">{{ matchupData.details.format }}</p>
       </div>
       <div *ngIf="timeString" class="w-full text-center sm:w-auto">
         <p class="text-sm font-semibold text-menu-500">Game Time</p>
