--- a/src/app/util/dropdowns/select/select-search.component.html
+++ b/src/app/util/dropdowns/select/select-search.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative w-full filter-container"
+  class="{{ customClass }} relative w-full filter-container"
   (click)="$event.stopPropagation()"
 >
   <!-- Value Box -->
