--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -1,6 +1,7 @@
 <form
   [formGroup]="draftForm"
   (ngSubmit)="onSubmit()"
+  (keydown.enter)="$event.preventDefault()"
   class="p-2 m-2 space-y-3 shadow-md team bg-aTeam-300 shadow-aTeam-600 rounded-xl"
 >
   <div class="w-full">
@@ -55,9 +56,7 @@
         <div class="px-4 w-full max-w-160">
           <select-search
             [placeholder]="'Add a Pokemon'"
-            [customClass]="
-              'rounded-lg bg-aTeam-200 shadow-md shadow-aTeam-400 der border-aTeam-300'
-            "
+            class="rounded-lg bg-aTeam-100 shadow-md shadow-aTeam-400"
             (itemSelected)="
               $event ? addNewPokemon(teamArray.controls.length, $event) : ''
             "
