--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -1,6 +1,7 @@
 <form
   [formGroup]="opponentForm"
   (ngSubmit)="onSubmit()"
+  (keydown.enter)="$event.preventDefault()"
   class="p-2 m-2 space-y-3 shadow-md bg-bTeam-300 team shadow-bTeam-600 rounded-xl"
 >
   <div class="w-full">
@@ -27,32 +28,36 @@
   </div>
   <div class="p-2 border-2 border-bTeam-200 rounded-xl">
     <ng-container *ngIf="!importing; else importMenu">
-      <button
-        type="button"
-        (click)="importing = true"
-        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-      >
-        Import
-        <import-svg class="h-full"></import-svg>
-      </button>
-      <div class="grid gap-x-4 md:grid-cols-1 lg:grid-cols-2">
-        <pokemon-form
-          *ngFor="let pokemonForm of teamArray.controls; let i = index"
-          [pokemonForm]="$any(pokemonForm)"
-          [formIndex]="i"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon(i + 1, $event)"
-          class="w-full"
-        ></pokemon-form>
-      </div>
-      <div class="flex justify-center w-full">
+      <div class="flex w-full items-center justify-between">
+        <div class="px-4 w-full max-w-160">
+          <select-search
+            [placeholder]="'Add a Pokemon'"
+            class="rounded-lg bg-bTeam-100 shadow-md shadow-bTeam-400"
+            (itemSelected)="
+              $event ? addNewPokemon(teamArray.controls.length, $event) : ''
+            "
+            [items]="names"
+          ></select-search>
+        </div>
         <button
           type="button"
-          (click)="addNewPokemon(teamArray.length)"
-          class="w-48 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
+          (click)="importing = true"
+          class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
         >
-          Add Pokemon
+          Import
+          <import-svg class="h-full"></import-svg>
         </button>
+      </div>
+      <div class="grid min-h-48 gap-x-4 md:grid-cols-1 lg:grid-cols-2">
+        @for (pokemonForm of teamArray.controls; track $index) {
+        <pokemon-form
+          [pokemonForm]="$any(pokemonForm)"
+          [formIndex]="$index"
+          bg="bTeam-100"
+          (deletePokemonEvent)="deletePokemon($event)"
+          (addPokemonEvent)="addNewPokemon($index + 1, $event)"
+        ></pokemon-form>
+        }
       </div>
     </ng-container>
     <ng-template #importMenu>
