base quick matchup working

--- a/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
+++ b/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
@@ -44,9 +44,9 @@
   <div class="flex justify-end w-full">
     <button
       type="submit"
-      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
+      class="w-fit py-1 px-3 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
     >
-      Submit
+      View Matchup
     </button>
   </div>
 </form>
