--- a/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
+++ b/src/app/tools/quick-matchup/form/quick-matchup-form.component.html
@@ -34,10 +34,10 @@
   </div>
 
   <div class="flex w-full p-2 space-x-2">
-    <div class="w-1/2">
+    <div class="w-1/2 border-2 border-aTeam-300">
       <team-form formControlName="team1" color="aTeam"></team-form>
     </div>
-    <div class="w-1/2">
+    <div class="w-1/2 border-2 border-bTeam-300">
       <team-form formControlName="team2" color="bTeam"></team-form>
     </div>
   </div>
