--- a/src/app/util/dropdowns/select/select-search.component.html
+++ b/src/app/util/dropdowns/select/select-search.component.html
@@ -1,5 +1,5 @@
 <div
-  [ngClass]="['relative w-full max-w-xs filter-container', class]"
+  [ngClass]="['relative w-full filter-container', class]"
   (click)="$event.stopPropagation()"
 >
   <!-- Value Box -->
