--- a/src/app/util/forms/team-form/team-form.component.html
+++ b/src/app/util/forms/team-form/team-form.component.html
@@ -1,11 +1,7 @@
-<div
-  class="w-full p-2 border-2 bg-{{ color }}-200 border-{{
-    color
-  }}-300 rounded-xl"
->
-  <ng-container *ngIf="!importing; else importMenu">
-    <div class="flex w-full items-center justify-between">
-      <div class="px-4 w-full max-w-160">
+<div class="w-full p-2  bg-{{ color }}-200  rounded-xl">
+  @if (!importing) {
+    <div class="flex items-center justify-between w-full">
+      <div class="w-full max-w-sm px-4">
         <select-search
           [placeholder]="'Add a Pokemon'"
           class="rounded-lg bg-{{ color }}-100 shadow-md shadow-{{ color }}-400"
@@ -19,24 +15,22 @@
         class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
       >
         Import
-        <import-svg class="h-full"></import-svg>
       </button>
     </div>
-    <div class="grid min-h-48 gap-x-4 md:grid-cols-1 lg:grid-cols-1">
+    <div class="grid gap-4 p-1 min-h-48 md:grid-cols-1 xl:grid-cols-2">
       @for (pokemonForm of teamArray.controls; track $index) {
-      <pokemon-form
-        [pokemonForm]="$any(pokemonForm)"
-        [color]="color"
-        [colorValue]="100"
-        class="w-full"
-        [formIndex]="$index"
-        (deletePokemonEvent)="deletePokemon($event)"
-        (addPokemonEvent)="addNewPokemon($event)"
-      ></pokemon-form>
+        <pokemon-form
+          [pokemonForm]="$any(pokemonForm)"
+          [color]="color"
+          [colorValue]="300"
+          class="w-full p-1 rounded-xl shadow-md bg-{{ color }}-100"
+          [formIndex]="$index"
+          (deletePokemonEvent)="deletePokemon($event)"
+          (addPokemonEvent)="addNewPokemon($event)"
+        ></pokemon-form>
       }
     </div>
-  </ng-container>
-  <ng-template #importMenu>
+  } @else {
     <button
       type="button"
       (click)="importing = false"
@@ -44,6 +38,15 @@
     >
       Cancel
     </button>
+
+    <div class="flex justify-center w-full">
+      <textarea
+        #textAreaInfo
+        spellcheck="false"
+        class="w-2/3 p-2 bg-{{ color }}-100 rounded resize-none h-96 max-w-128"
+        placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
+      ></textarea>
+    </div>
     <div class="flex justify-center w-full">
       <button
         type="button"
@@ -53,15 +56,7 @@
         Import
       </button>
     </div>
-    <div class="flex justify-center w-full">
-      <textarea
-        #textAreaInfo
-        spellcheck="false"
-        class="w-2/3 p-2 bg-page rounded resize-none h-96 max-w-128"
-        placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
-      ></textarea>
-    </div>
-  </ng-template>
+  }
 </div>
 <!-- @for (control of teamArray.controls; track $index) {
 {{ control.value | json }}
