--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -4,15 +4,17 @@
   (keydown.enter)="$event.preventDefault()"
   class="p-2 m-2 space-y-3 shadow-md team bg-aTeam-300 shadow-aTeam-600 rounded-xl"
 >
-  <div class="w-full">
-    <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
+  <div class="w-full p-2 lg:space-x-2 lg:flex">
+    <div
+      class="grid flex-shrink-0 w-full grid-cols-1 lg:w-112 sm:grid-cols-2 gap-x-2 lg:grid-cols-1 h-fit"
+    >
       <div>
         <label class="block mb-1 font-bold">League Name</label>
         <input
           formControlName="leagueName"
           spellcheck="false"
           placeholder="Pokemon Draft League"
-          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         />
       </div>
       <div>
@@ -21,13 +23,13 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-symbolColor-main text-center placeholder:text-symbolColor-disabled rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         />
       </div>
       <div>
         <label class="block mb-1 font-bold">Format</label>
         <div
-          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
           <select-no-search
             [items]="formats"
@@ -39,7 +41,7 @@
       <div>
         <label class="block mb-1 font-bold">Ruleset</label>
         <div
-          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
           <select-no-search
             [items]="rulesets"
@@ -49,75 +51,21 @@
         </div>
       </div>
     </div>
+
+    <div class="flex-grow min-h-full space-y-1">
+      <label class="font-bold" for="team">Team</label>
+      <div id="team" class="shadow-md rounded-xl">
+        <team-form formControlName="team" color="aTeam"></team-form>
+      </div>
+    </div>
   </div>
-  <div class="p-2 border-2 border-aTeam-200 rounded-xl">
-    <ng-container *ngIf="!importing; else importMenu">
-      <div class="flex w-full items-center justify-between">
-        <div class="px-4 w-full max-w-160">
-          <select-search
-            [placeholder]="'Add a Pokemon'"
-            class="rounded-lg bg-aTeam-100 shadow-md shadow-aTeam-400"
-            (itemSelected)="
-              $event ? addNewPokemon(teamArray.controls.length, $event) : ''
-            "
-            [items]="names"
-          ></select-search>
-        </div>
-        <button
-          type="button"
-          (click)="importing = true"
-          class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-        >
-          Import
-          <import-svg class="h-full"></import-svg>
-        </button>
-      </div>
-      <div class="grid min-h-48 gap-x-4 md:grid-cols-1 lg:grid-cols-2">
-        @for (pokemonForm of teamArray.controls; track $index) {
-        <pokemon-form
-          [pokemonForm]="$any(pokemonForm)"
-          class="w-full"
-          [formIndex]="$index"
-          (deletePokemonEvent)="deletePokemon($event)"
-          (addPokemonEvent)="addNewPokemon($index, $event)"
-        ></pokemon-form>
-        }
-      </div>
-    </ng-container>
-    <ng-template #importMenu>
-      <button
-        type="button"
-        (click)="importing = false"
-        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-      >
-        Cancel
-      </button>
-      <div class="flex justify-center w-full">
-        <button
-          type="button"
-          (click)="importPokemon(textAreaInfo.value)"
-          class="w-32 px-1 my-3 font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-        >
-          Import
-        </button>
-      </div>
-      <div class="flex justify-center w-full">
-        <textarea
-          #textAreaInfo
-          spellcheck="false"
-          class="w-2/3 p-2 bg-page rounded resize-none h-96 max-w-128"
-          placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
-        ></textarea>
-      </div>
-    </ng-template>
-  </div>
+
   <div class="flex justify-end w-full" *ngIf="!importing">
     <button
       type="submit"
-      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-menu-200 hover:bg-menu-100 shadow-menu-600"
+      class="w-24 p-1 mx-4 text-xl font-bold shadow rounded-xl bg-menu-200 hover:bg-menu-100 shadow-menu-600"
     >
       Submit
     </button>
   </div>
 </form>
-<!-- {{ draftForm.value | json }} -->
